--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 trusted : [127.0.0.1:8000,127.0.0.1:8001,127.0.0.1:8002]
-faulty : [127.0.0.1:8003]
+faulty : []
 algorithm : 7
 source_byzantine : false
 data_size : 100
