--- a/config.yaml
+++ b/config.yaml
@@ -1,6 +1,6 @@
-trusted : [10.0.0.1:8001,10.0.0.2:8002,10.0.0.3:8003,10.0.0.4:8004,10.0.0.5:8005] #trusted ip + port
-faulty : [] #faulty ip + port
-algorithm : 11 #[1,2,3,4...,11]
+trusted : [10.0.0.1:8001,10.0.0.2:8002,10.0.0.3:8003,10.0.0.4:8004,10.0.0.5:8005,10.0.0.6:8006,10.0.0.7:8007,10.0.0.8:8008,10.0.0.9:8009,10.0.0.10:8010,10.0.0.11:8011,10.0.0.12:8012,10.0.0.13:8013,10.0.0.14:8014,10.0.0.15:8015,10.0.0.16:8016]] #trusted ip + port
+faulty : [10.0.0.17:8017,10.0.0.8018,10.0.0.19:8019,10.0.0.20:8020] #faulty ip + port
+algorithm : 4 #[1,2,3,4...,11]
 source_byzantine : true #[true, false]
 data_size : 1024 #size is bytes
 rounds : 2000 # number of data reliable broadcast from the source
